--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@ opacity:.85
 <div class="box">
 <h3>Who are we</h3>
 <p>
-Example text goes here. You can replace this later with your real description about your community, your giveaways, and your goals.
+We are a small community that buys, sells, and gives away brainrots from the popular game Steal A Brainrot on roblox. This community was founded in 2025 by z3on.
 </p>
 </div>
 
 <div class="box">
 <h3>Are we legit?</h3>
 <p>
-Example text goes here. You can later explain how your giveaways work, proof, and how people can trust your project.
+Yes! We do daily giveaways and events to ensure that everyone can get rewarded with rare/secret/godly brainrots! Everything is 100% free and full of fun!
 </p>
 </div>
 
@@ -176,13 +176,13 @@ Example text goes here. You can later explain how your giveaways work, proof, an
 
 <div class="server">
 <h4>Join private server 1</h4>
-<a class="join" href="https://www.roblox.com" target="_blank">Join</a>
+<a class="join" href="https://www.roblox.com.gl/games/109983668079237/Steal-a-Brainrot?privateServerLinkCode=866760135488774976082314212638" target="_blank">Join</a>
 <div class="status">Online members: 7/8</div>
 </div>
 
 <div class="server">
 <h4>Join server 2</h4>
-<a class="join" href="https://www.roblox.com" target="_blank">Join</a>
+<a class="join" href="https://www.roblox.com.gl/games/109983668079237/Steal-a-Brainrot?privateServerLinkCode=866760135488774976082314212638" target="_blank">Join</a>
 <div class="status">Online members: 3/8</div>
 </div>
 
@@ -190,4 +190,5 @@ Example text goes here. You can later explain how your giveaways work, proof, an
 
 </div>
 </body>
+
 </html>
